--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 
     <img width="200px" src="https://showbams.files.wordpress.com/2014/12/thee-oh-sees-3.jpg">
 
-
     <p>Small-brained musician attempting to code for the first time.</p>
-    
+
+    <h3>CONTACTS</h3>
+
+    <UL>
+        <li><strong>Email</strong>timhellman@yahoo.com</li>
+        <li><strong>GitHub</strong>timhellman</li>
+        <li><strong>Portfolio</strong>COMING SOOOOOOON</li>
+
+    </UL>
+</body>
+</html>
